--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <main>
             <section class="choose-bank">
                 <div class="intro">
-                    <h2>Why Choose <br> Easybank?</h2>
+                    <h2>Why Choose Easybank?</h2>
                     <p>We leverage Open Banking to turn your bank account into your financial hub. COntrol your finances like never before.</p>
                 </div>
                 <div class="service-wrapper">
