added the svg logo to the html file

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <footer>
             <div class="comp-logo">
-                <img src="images/logo.svg" alt="easybank logo">
+                <img src="images/logo-copy.svg" alt="easybank logo">
                 <div class="social-media">
                     <a href="#"><img src="images/icon-facebook.svg" alt=""></a>
                     <a href="#"><img src="images/icon-youtube.svg" alt=""></a>
